@@ -58,6 +58,7 @@ int list_height = VLIST_HEIGHT;
 int repeat_action = FALSE;
 int show_menu_icons = 1;
 int show_taskbar_icon_overlay = 1;
+int minimize_to_system_tray = 0;
 
 int rx = UNDEFINED_COORD;
 int ry = UNDEFINED_COORD;
@@ -109,6 +110,7 @@ WGX_OPTION read_only_options[] = {
     {WGX_CFG_INT,     0, "restore_default_window_size", &restore_default_window_size, 0},
     {WGX_CFG_INT,     0, "show_menu_icons", &show_menu_icons, 0},
     {WGX_CFG_INT,     0, "show_taskbar_icon_overlay", &show_taskbar_icon_overlay, 0},
+    {WGX_CFG_INT,     0, "minimize_to_system_tray", &minimize_to_system_tray, 0},
     
     {0,               0, NULL, NULL, NULL}
 };
@@ -266,6 +268,7 @@ DWORD WINAPI PrefsChangesTrackingProc(LPVOID lpParameter)
     int s_job_flags;
     int cw[sizeof(user_defined_column_widths) / sizeof(int)];
     int s_list_height;
+    int s_minimize_to_system_tray;
     
     h = FindFirstChangeNotification(".\\options",
             FALSE,FILE_NOTIFY_CHANGE_LAST_WRITE);
@@ -291,6 +294,7 @@ DWORD WINAPI PrefsChangesTrackingProc(LPVOID lpParameter)
                 memcpy(&cw,&user_defined_column_widths,sizeof(user_defined_column_widths));
                 s_list_height = list_height;
                 s_job_flags = job_flags;
+                s_minimize_to_system_tray = minimize_to_system_tray;
                 
                 /* reload preferences */
                 GetPrefs();
@@ -323,6 +327,24 @@ DWORD WINAPI PrefsChangesTrackingProc(LPVOID lpParameter)
                 } else {
                     /* redraw map if grid color changed */
                     RedrawMap(current_job,0);
+                }
+                
+                /* handle minimize_to_system_tray option adjustment */
+                if(hTaskbarIconEvent){
+                    if(WaitForSingleObject(hTaskbarIconEvent,INFINITE) != WAIT_OBJECT_0){
+                        WgxDbgPrintLastError("PrefsChangesTrackingProc: wait on hTaskbarIconEvent failed");
+                    } else {
+                        if(minimize_to_system_tray != s_minimize_to_system_tray){
+                            if(IsIconic(hWindow))
+                                ShowWindow(hWindow,minimize_to_system_tray ? SW_HIDE : SW_SHOW);
+                            /* set/remove notification area icon */
+                            if(minimize_to_system_tray)
+                                ShowSystemTrayIcon(NIM_ADD);
+                            else
+                                HideSystemTrayIcon();
+                        }
+                        SetEvent(hTaskbarIconEvent);
+                    }
                 }
             }
             /* wait for the next notification */
