@@ -39,6 +39,7 @@ void CreateTaskbarIconSynchObjects(void)
     if(hTaskbarIconEvent == NULL){
         WgxDbgPrintLastError("CreateTaskbarIconSynchObjects: event creation failed");
         WgxDbgPrint("no taskbar icon overlays will be shown");
+        WgxDbgPrint("and no system tray icon will be shown");
     }
 }
 
@@ -65,12 +66,14 @@ void DestroyTaskbarIconSynchObjects(void)
  */
 void SetTaskbarIconOverlay(int resource_id, wchar_t *description_key)
 {
-    if(WaitForSingleObject(hLangPackEvent,INFINITE) != WAIT_OBJECT_0){
-        WgxDbgPrintLastError("SetTaskbarIconOverlay: wait on hLangPackEvent failed");
-    } else {
-        (void)WgxSetTaskbarIconOverlay(hWindow,hInstance,resource_id,
-            WgxGetResourceString(i18n_table,description_key));
-        SetEvent(hLangPackEvent);
+    if(show_taskbar_icon_overlay){
+        if(WaitForSingleObject(hLangPackEvent,INFINITE) != WAIT_OBJECT_0){
+            WgxDbgPrintLastError("SetTaskbarIconOverlay: wait on hLangPackEvent failed");
+        } else {
+            (void)WgxSetTaskbarIconOverlay(hWindow,hInstance,resource_id,
+                WgxGetResourceString(i18n_table,description_key));
+            SetEvent(hLangPackEvent);
+        }
     }
 }
 
